fixed the matrix for less allocation and faster filling